<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="roeyevgi1@gmail.com">roey</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- Telling gazebo to look for the model .stl files in the package folder -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>     
  </export>
</package>
